Fixed anycpu version of HtmlUnit.dll. x86 and x64 versions removed, should no longer be needed.

--- a/app/NHtmlUnit/NHtmlUnit.csproj
+++ b/app/NHtmlUnit/NHtmlUnit.csproj
@@ -34,7 +34,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="HtmlUnit, Version=2.9.0.0, Culture=neutral, processorArchitecture=AMD64">
-      <HintPath>..\..\lib\HtmlUnit\x64\HtmlUnit.dll</HintPath>
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\lib\HtmlUnit\anycpu\HtmlUnit.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.AWT.WinForms">
       <HintPath>..\..\lib\IKVM\_bin\IKVM.AWT.WinForms.dll</HintPath>
