--- a/app/NHtmlUnitGenerator/NHtmlUnit.Generator.csproj
+++ b/app/NHtmlUnitGenerator/NHtmlUnit.Generator.csproj
@@ -151,6 +151,9 @@
     <Reference Include="IKVM.Runtime.JNI">
       <HintPath>..\..\lib\IKVM\_bin\IKVM.Runtime.JNI.dll</HintPath>
     </Reference>
+    <Reference Include="inflector_extension">
+      <HintPath>..\..\packages\inflector_extension.0.0.7\lib\Net40\inflector_extension.dll</HintPath>
+    </Reference>
     <Reference Include="Mono.Cecil, Version=0.9.5.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Mono.Cecil.0.9.5.2\lib\net40\Mono.Cecil.dll</HintPath>
@@ -179,6 +182,7 @@
     <Compile Include="..\GlobalAssemblyInfo.cs">
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
+    <Compile Include="PeVerifier.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
