--- a/NHtmlUnit.nuspec
+++ b/NHtmlUnit.nuspec
@@ -2,7 +2,7 @@
 <package xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema">
   <metadata>
     <id>NHtmlUnit</id>
-    <version>2.9.1.0</version>
+    <version>2.10.0.0</version>
     <title>NHtmlUnit</title>
     <authors>OKB AS</authors>
     <owners>OKB AS</owners>
@@ -10,34 +10,18 @@
     <projectUrl>https://github.com/HtmlUnit/NHtmlUnit</projectUrl>
     <!-- <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl> -->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>.NET wrapper of HtmlUnit.</description>
-    <releaseNotes>Initial release for testing.</releaseNotes>
-    <copyright>Copyright © OKB AS 2011</copyright>
-    <tags>testing htmlunit nhtmlunit</tags>
-<!--    <dependencies>
-      <dependency id="SampleDependency" version="1.0" />
-    </dependencies> -->
+    <description>NHtmlUnit is a .NET wrapper of HtmlUnit; a "GUI-less browser for Java programs". It allows you to write code to test web applications with a headless, automated browser.</description>
+    <releaseNotes>Added dependency to IKVM.NET and updated version 2.10 of HtmlUnit.</releaseNotes>
+    <copyright>Copyright © OKB AS 2012</copyright>
+    <tags>testing htmlunit nhtmlunit headless browser</tags>
+    <dependencies>
+        <dependency id="IKVM.NET" version="7.0.4335.1" />
+    </dependencies>
     <frameworkAssemblies />
     <references />
   </metadata>
   <files>
-	<file src="app\NHtmlUnit\bin\Debug\HtmlUnit.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Beans.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Charsets.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Corba.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Core.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Management.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Media.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Naming.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Remoting.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Security.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.SwingAWT.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Text.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.Util.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.XML.API.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.XML.Parse.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.OpenJDK.XML.XPath.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\IKVM.Runtime.dll" target="lib" />
-	<file src="app\NHtmlUnit\bin\Debug\NHtmlUnit.dll" target="lib" />
+    <file src="app\NHtmlUnit\bin\Release\HtmlUnit.dll" target="lib" />
+    <file src="app\NHtmlUnit\bin\Release\NHtmlUnit.dll" target="lib" />
   </files>
 </package>
