--- a/app/NHtmlUnit/NHtmlUnit.csproj
+++ b/app/NHtmlUnit/NHtmlUnit.csproj
@@ -37,38 +37,95 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\HtmlUnit\anycpu\HtmlUnit.dll</HintPath>
     </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
+    <Reference Include="ikvm">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\ikvm.exe</HintPath>
+    </Reference>
+    <Reference Include="IKVM.AWT.WinForms">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.AWT.WinForms.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Beans">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Beans.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Charsets">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Charsets.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Corba">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Corba.dll</HintPath>
+    </Reference>
     <Reference Include="IKVM.OpenJDK.Core">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.OpenJDK.Core.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Jdbc">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Jdbc.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.Management">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.OpenJDK.Management.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Management.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.Media">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.OpenJDK.Media.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Media.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Misc">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Misc.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Naming">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Naming.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Remoting">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Remoting.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.Security">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.OpenJDK.Security.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Security.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.SwingAWT">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.OpenJDK.SwingAWT.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.SwingAWT.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.Text">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.OpenJDK.Text.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Text.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.Tools">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Tools.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.Util">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.OpenJDK.Util.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.Util.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.XML.API">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.OpenJDK.XML.API.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.XML.API.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.Bind">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.XML.Bind.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.Crypto">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.XML.Crypto.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.XML.Parse">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.OpenJDK.XML.Parse.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.XML.Parse.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.Transform">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.XML.Transform.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.OpenJDK.XML.WebServices">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.XML.WebServices.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.OpenJDK.XML.XPath">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.OpenJDK.XML.XPath.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.OpenJDK.XML.XPath.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.Reflection">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.Reflection.dll</HintPath>
     </Reference>
     <Reference Include="IKVM.Runtime">
-      <HintPath>..\..\lib\IKVM\_bin\IKVM.Runtime.dll</HintPath>
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.Runtime.dll</HintPath>
+    </Reference>
+    <Reference Include="IKVM.Runtime.JNI">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\IKVM.Runtime.JNI.dll</HintPath>
+    </Reference>
+    <Reference Include="ikvmc">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\ikvmc.exe</HintPath>
+    </Reference>
+    <Reference Include="ikvmstub">
+      <HintPath>..\..\packages\IKVM.NET.7.0.4335.1\lib\ikvmstub.exe</HintPath>
     </Reference>
     <Reference Include="System" />
   </ItemGroup>
@@ -838,7 +895,9 @@
     <Compile Include="Wrappers\ShallowIterableWrapper.cs" />
     <Compile Include="Wrappers\ShallowListWrapper.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
