Referenced NUnit on NuGet and removed /tools/NUnit

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,4 +2,6 @@
 <repositories>
   <repository path="..\app\NHtmlUnit\packages.config" />
   <repository path="..\app\NHtmlUnitGenerator\packages.config" />
+  <repository path="..\tests\ConsoleTest\packages.config" />
+  <repository path="..\tests\IntegrationTests\packages.config" />
 </repositories>
