--- a/tests/IntegrationTests/packages.config
+++ b/tests/IntegrationTests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="IKVM.NET" version="7.0.4335.1" targetFramework="net35" />
+  <package id="NUnit" version="2.6.1" targetFramework="net35" />
 </packages>
