--- a/app/NHtmlUnitGenerator/app.config
+++ b/app/NHtmlUnitGenerator/app.config
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -15,4 +15,76 @@
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
     </startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.Runtime" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Core" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Beans" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Text" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Util" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.XML.API" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.SwingAWT" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Security" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Media" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Jdbc" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Naming" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.XML.Parse" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.XML.XPath" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.46.0.1" newVersion="0.46.0.1" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Misc" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.OpenJDK.Remoting" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.AWT.WinForms" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="IKVM.Runtime.JNI" publicKeyToken="13235d27fcbfff58" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-7.3.4830.0" newVersion="7.3.4830.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
