--- a/tests/IntegrationTests/packages.config
+++ b/tests/IntegrationTests/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="IKVM.NET" version="7.0.4335.1" targetFramework="net35" />
-  <package id="NUnit" version="2.6.1" targetFramework="net35" />
+  <package id="IKVM" version="7.3.4830.0" targetFramework="net35" />
+  <package id="NUnit" version="2.6.3" targetFramework="net35" />
 </packages>
