Generating nuspec and assembly version from htmlunit version

--- a/app/NHtmlUnitGenerator/NHtmlUnit.Generator.csproj
+++ b/app/NHtmlUnitGenerator/NHtmlUnit.Generator.csproj
@@ -179,6 +179,8 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="Templates\GlobalAssemblyInfo.cs.template" />
+    <None Include="Templates\NHtmlUnit.nuspec.template" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
