--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,10 @@
 *.user
 *.dotCover
 *.nupkg
+.DS_Store
 /_ReSharper.NHtmlUnit/
 /packages/*
 !/packages/repositories.config
 !/tools/*
+/tools/.DS_Store
 /*.tss
