--- a/app/NHtmlUnitGenerator/Templates/NHtmlUnit.nuspec.template
+++ b/app/NHtmlUnitGenerator/Templates/NHtmlUnit.nuspec.template
@@ -8,14 +8,13 @@
     <owners>OKB AS</owners>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
     <projectUrl>https://github.com/HtmlUnit/NHtmlUnit</projectUrl>
-    <!-- <iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl> -->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>NHtmlUnit is a .NET wrapper of HtmlUnit; a "GUI-less browser for Java programs". It allows you to write code to test web applications with a headless, automated browser.</description>
-    <releaseNotes>Updated to version {1} of HtmlUnit.</releaseNotes>
+    <releaseNotes>Updated to version 7.4.5196 of IKVM.</releaseNotes>
     <copyright>Copyright © OKB AS {0}</copyright>
     <tags>testing htmlunit nhtmlunit headless browser</tags>
     <dependencies>
-        <dependency id="IKVM" version="7.3.4830.0" />
+        <dependency id="IKVM" version="7.4.5196.0" />
     </dependencies>
     <frameworkAssemblies />
     <references />
