--- a/NHtmlUnit.nuspec
+++ b/NHtmlUnit.nuspec
@@ -20,7 +20,7 @@
     <references />
   </metadata>
   <files>
-    <file src="app\NHtmlUnit\bin\Release\HtmlUnit.dll" target="lib" />
-    <file src="app\NHtmlUnit\bin\Release\NHtmlUnit.dll" target="lib" />
+    <file src="app\NHtmlUnit\bin\Release\HtmlUnit.dll" target="lib/net35" />
+    <file src="app\NHtmlUnit\bin\Release\NHtmlUnit.dll" target="lib/net35" />
   </files>
 </package>
