--- a/app/NHtmlUnitGenerator/packages.config
+++ b/app/NHtmlUnitGenerator/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GitVersionTask" version="3.5.2" targetFramework="net40" developmentDependency="true" />
   <package id="IKVM" version="7.4.5196.0" targetFramework="net40" />
 </packages>
