--- a/tests/ConsoleTest/packages.config
+++ b/tests/ConsoleTest/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GitVersionTask" version="3.5.2" targetFramework="net40-client" developmentDependency="true" />
-  <package id="IKVM" version="7.4.5196.0" targetFramework="net40-Client" />
+  <package id="GitVersionTask" version="3.5.2" targetFramework="net45" developmentDependency="true" />
+  <package id="IKVM" version="7.4.5196.0" targetFramework="net45" />
 </packages>
