Delete nuget.cmd and add full nuget command to appveyor.yml

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ test:
     - 'tests/**/bin/*/*Tests.dll'
 
 before_deploy:
-  - nuget.cmd pack
+  - nuget.exe pack NHtmlUnit.nuspec -Verbosity detailed -Symbols -Properties Configuration=Release
 
 deploy:
 - provider: NuGet
