--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ test:
     - 'tests/**/bin/*/*Tests.dll'
 
 after_build:
-  - nuget.exe pack NHtmlUnit.nuspec -Verbosity detailed -Symbols -Properties Configuration=Release
+  - nuget.exe pack app/NHtmlUnit/NHtmlUnit.nuspec -Verbosity detailed -Symbols -Properties Configuration=Release
 
 deploy:
 - provider: NuGet
@@ -22,6 +22,11 @@ deploy:
     secure: Rct2fdDCPZdCId+Xelo02OHeWpN2qMkeve07e1bpk8/wVUDO+KESONQOCe/ah9Wu
   on:
     appveyor_repo_tag: true
+- provider: NuGet
+  api_key:
+    secure: Rct2fdDCPZdCId+Xelo02OHeWpN2qMkeve07e1bpk8/wVUDO+KESONQOCe/ah9Wu
+  on:
+    branch: feature/appveyor-build
 
 notifications:
   on_build_success: false
