Don't publish nuget on internal AppVeyor feed and output the version number

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,6 @@ before_build:
 
 build:
   project: NHtmlUnit.sln
-  publish_nuget: true
 
 configuration:
   - Release
@@ -17,7 +16,9 @@ test:
     - 'tests/**/bin/*/*Tests.dll'
 
 after_build:
-  - ps: nuget.exe pack app/NHtmlUnit/NHtmlUnit.csproj -Verbosity detailed -Symbols -Properties Configuration=Release -Version $env:GitVersion_NuGetVersion
+  - ps: |
+      Write-Host "nuget pack version $env:GitVersion_NuGetVersion"
+      nuget.exe pack app/NHtmlUnit/NHtmlUnit.csproj -Verbosity detailed -Symbols -Properties Configuration=Release -Version $env:GitVersion_NuGetVersion
 
 deploy:
 - provider: NuGet
